// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LanguageParser should parse Go fixtures correctly 1`] = `
[
  {
    "chunk_hash": "fd68edbadc1535917a1bca6848f45e93c6588249f923c24958981b6c28f2a045",
    "containerPath": "",
    "content": "import "fmt"",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "import_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: import_declaration

import "fmt"",
    "startLine": 3,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "0c01bc050a86f2516932d9c238e35e968f09510f2fa933e224bc9e66e4a3781c",
    "containerPath": "",
    "content": "// Hello is a function that prints a greeting.",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: comment

// Hello is a function that prints a greeting.",
    "startLine": 5,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "381515bf0dd48f63c690606252b0806e51290234703b9dcbf7c034753fa96704",
    "containerPath": "",
    "content": "func Hello() {
	fmt.Println("Hello, Go!")
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "function_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: function_declaration

func Hello() {
	fmt.Println("Hello, Go!")
}",
    "startLine": 6,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "60182a39609bfe8bdda418af2ef400cdd9f97a08d48122566e1f760112d05b8d",
    "containerPath": "",
    "content": "fmt.Println("Hello, Go!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 7,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "call_expression",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: call_expression

fmt.Println("Hello, Go!")",
    "startLine": 7,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "125de83243a2f4cb0869d974cf82881c1ea38b53de65ce3c8cf597555e74b6ac",
    "containerPath": "",
    "content": "type MyType struct {
    name string
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 12,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "3617ff140f9ed70e1b2ee35bb62bf5929961447a",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "type_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: type_declaration

type MyType struct {
    name string
}",
    "startLine": 10,
    "symbols": [
      {
        "kind": "function",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "type",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Java fixtures correctly 1`] = `
[
  {
    "chunk_hash": "c7bf8cb907acb4b0d6e6fddaf47d772c5f0336e85f853a81815767441d7dff94",
    "containerPath": "",
    "content": "import java.util.List;",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "import_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: import_declaration

import java.util.List;",
    "startLine": 1,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "43827720aaea18494554ac7ba8a8973202016cb7e62c64b34ae982c939a5efbb",
    "containerPath": "",
    "content": "class MyClass {
    /**
     * This is a Javadoc comment.
     */
    public void myMethod() {
        System.out.println("Hello, Java!");
    }
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 10,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "class_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: class_declaration

class MyClass {
    /**
     * This is a Javadoc comment.
     */
    public void myMethod() {
        System.out.println("Hello, Java!");
    }
}",
    "startLine": 3,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "01fb998a1b76939bde6bbce21bbd358fe186be860339025492b71218b0248574",
    "containerPath": "MyClass",
    "content": "/**
     * This is a Javadoc comment.
     */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "block_comment",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: block_comment
containerPath: MyClass

/**
     * This is a Javadoc comment.
     */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "0b64c9f2f3e7d8bc006ab2841e2516f7eb1752ced4fccf76b9ccf9aa4562376d",
    "containerPath": "MyClass",
    "content": "public void myMethod() {
        System.out.println("Hello, Java!");
    }",
    "created_at": "[TIMESTAMP]",
    "endLine": 9,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "method_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: method_declaration
containerPath: MyClass

public void myMethod() {
        System.out.println("Hello, Java!");
    }",
    "startLine": 7,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "cd7905eb2bfb7c7bed1c0e2cb2c32501d2723c92d0d5e41235bc9938f56584da",
    "containerPath": "",
    "content": "System.out.println("Hello, Java!");",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "expression_statement",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: expression_statement

System.out.println("Hello, Java!");",
    "startLine": 8,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "5a6f7755ddd7f02c160e744130e3ef226397b9fd3cbca4d7743d1e8bd129accf",
    "containerPath": "",
    "content": "System.out.println("Hello, Java!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "676cf70813c5f27e977bf1c08dd977ddfd4d4906",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "method_invocation",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: method_invocation

System.out.println("Hello, Java!")",
    "startLine": 8,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 7,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse JavaScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: comment

// This is a comment",
    "startLine": 1,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ed8291088a1a5a73b9864543d1ce1e9a65ff0a84fc7b2e84bb51d4394d593245",
    "containerPath": "",
    "content": "import { a } from 'b';",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "import_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: import_statement

import { a } from 'b';",
    "startLine": 2,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7879ae4ab38bdc5513c4af4a422cd870415b4e829ebd550543748ead16e0f1a4",
    "containerPath": "",
    "content": "/**
 * This is a JSDoc comment.
 */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: comment

/**
 * This is a JSDoc comment.
 */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "863f06bfe158d269234eff9d0167d4cbc6492a68f4cf705ef7a75811dc8c9ec3",
    "containerPath": "",
    "content": "function hello() {
  console.log('Hello, world!');
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 9,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "function_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: function_declaration

function hello() {
  console.log('Hello, world!');
}",
    "startLine": 7,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "eee7859f1f61de3723f1e42c8bc57adeec0c651524e3c74d96583d45096b8987",
    "containerPath": "",
    "content": "console.log('Hello, world!');",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "expression_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: expression_statement

console.log('Hello, world!');",
    "startLine": 8,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b8059cfb1ea623e79efbf432db31595df213c99c6534c58bec9d5f5e069344df",
    "containerPath": "",
    "content": "console.log('Hello, world!')",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "call_expression",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: call_expression

console.log('Hello, world!')",
    "startLine": 8,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6fd7f5fcd99232f0e49797bebada48669972e9c870171a3848c61eebca7f22dd",
    "containerPath": "",
    "content": "class MyClass {
  myMethod() {
    return 1;
  }
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 15,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "class_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: class_declaration

class MyClass {
  myMethod() {
    return 1;
  }
}",
    "startLine": 11,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4f9ff60fb6e9d9218195c5b2af2e37c126497b9dbda6838356718ce7fe4d4b7a",
    "containerPath": "MyClass",
    "content": "myMethod() {
    return 1;
  }",
    "created_at": "[TIMESTAMP]",
    "endLine": 14,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "method_definition",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: method_definition
containerPath: MyClass

myMethod() {
    return 1;
  }",
    "startLine": 12,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "f58b7c3af621b52a2bb7dc67d4491f9ab6c6d16e3cfa1e46e670ff4f9a301fdc",
    "containerPath": "",
    "content": "return 1;",
    "created_at": "[TIMESTAMP]",
    "endLine": 13,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "return_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: return_statement

return 1;",
    "startLine": 13,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b4debc24bebfb7484ed5e08c2e47765e7b7449130b923b7c89c7079823b5c73a",
    "containerPath": "",
    "content": "const myVar = () => {};",
    "created_at": "[TIMESTAMP]",
    "endLine": 17,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "66a4426da26b3dd783dd4f065db3fcb5be3c99c4",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "lexical_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: lexical_declaration

const myVar = () => {};",
    "startLine": 17,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Markdown fixtures correctly 1`] = `
[
  {
    "chunk_hash": "ed09ca2736773c6ceb4e8e5499e71d1a80fd6a4a346efff7a88a2d6c3ff27274",
    "content": "# Markdown Fixture",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

# Markdown Fixture",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "152f882642f9c50be75eeade70c1ea1e2cfbe7901db4a0a46b2f9d25159c755f",
    "content": "This is a paragraph.",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

This is a paragraph.",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6a71ffba5e7729a8faef7020e41476963c3a49ca90958e41ce8eb234ed005d08",
    "content": "## This is a heading",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

## This is a heading",
    "startLine": 5,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "8dada63f9b5a079670e1e692f1790aa4334c5d920f6333a56d49d483eac7f42d",
    "content": "This is another paragraph.
",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

This is another paragraph.
",
    "startLine": 7,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Python fixtures correctly 1`] = `
[
  {
    "chunk_hash": "de2abade832c8e350a1bdc98cfcdb1e202ac4749c5fc51a4a970d41736b6df5c",
    "containerPath": "",
    "content": "import os",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "deccc575415922af2636d83dab41365c1cd68f33",
    "imports": [
      {
        "path": "os",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "import_statement",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: import_statement

import os",
    "startLine": 1,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4416cd8dd5bbde8d874fb5633b664d25cb2cf0056bb279836527e32e4dd1cf0e",
    "containerPath": "",
    "content": "class MyClass:
    def my_method(self):
        print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "deccc575415922af2636d83dab41365c1cd68f33",
    "imports": [
      {
        "path": "os",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "class_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: class_definition

class MyClass:
    def my_method(self):
        print("Hello, Python!")",
    "startLine": 3,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b8cb7ef3b47294cb6d26e1a0479dba320243ecd0cf40e6336775f3d049a1de70",
    "containerPath": "",
    "content": "def my_method(self):
        print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "deccc575415922af2636d83dab41365c1cd68f33",
    "imports": [
      {
        "path": "os",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "function_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: function_definition

def my_method(self):
        print("Hello, Python!")",
    "startLine": 4,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "12bc33d9722a0828233d0d9bf5fa151caa0521f490ef4fe5ca7bcc3b6faeeaeb",
    "containerPath": "",
    "content": "print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "deccc575415922af2636d83dab41365c1cd68f33",
    "imports": [
      {
        "path": "os",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "call",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: call

print("Hello, Python!")",
    "startLine": 5,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "affe3cd249911aca1214a479053a5c8725ff99c14663998949812c3246efe906",
    "containerPath": "",
    "content": "def my_function():
    """This is a docstring."""
    pass",
    "created_at": "[TIMESTAMP]",
    "endLine": 9,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "deccc575415922af2636d83dab41365c1cd68f33",
    "imports": [
      {
        "path": "os",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "function_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: function_definition

def my_function():
    """This is a docstring."""
    pass",
    "startLine": 7,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "3591cf9ebe4d74d7d64cd7ec1ca1a678d9f8b52cfc8a5995a734b417050fb00c",
    "containerPath": "",
    "content": """"This is a docstring."""",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "deccc575415922af2636d83dab41365c1cd68f33",
    "imports": [
      {
        "path": "os",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "expression_statement",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: expression_statement

"""This is a docstring."""",
    "startLine": 8,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse TypeScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: comment

// This is a comment",
    "startLine": 1,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ed8291088a1a5a73b9864543d1ce1e9a65ff0a84fc7b2e84bb51d4394d593245",
    "containerPath": "",
    "content": "import { a } from 'b';",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "import_statement",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: import_statement

import { a } from 'b';",
    "startLine": 2,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7879ae4ab38bdc5513c4af4a422cd870415b4e829ebd550543748ead16e0f1a4",
    "containerPath": "",
    "content": "/**
 * This is a JSDoc comment.
 */",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "comment",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: comment

/**
 * This is a JSDoc comment.
 */",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "863f06bfe158d269234eff9d0167d4cbc6492a68f4cf705ef7a75811dc8c9ec3",
    "containerPath": "",
    "content": "function hello() {
  console.log('Hello, world!');
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 9,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "function_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: function_declaration

function hello() {
  console.log('Hello, world!');
}",
    "startLine": 7,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6fd7f5fcd99232f0e49797bebada48669972e9c870171a3848c61eebca7f22dd",
    "containerPath": "",
    "content": "class MyClass {
  myMethod() {
    return 1;
  }
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 15,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "class_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: class_declaration

class MyClass {
  myMethod() {
    return 1;
  }
}",
    "startLine": 11,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4f9ff60fb6e9d9218195c5b2af2e37c126497b9dbda6838356718ce7fe4d4b7a",
    "containerPath": "MyClass",
    "content": "myMethod() {
    return 1;
  }",
    "created_at": "[TIMESTAMP]",
    "endLine": 14,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "method_definition",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: method_definition
containerPath: MyClass

myMethod() {
    return 1;
  }",
    "startLine": 12,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b4debc24bebfb7484ed5e08c2e47765e7b7449130b923b7c89c7079823b5c73a",
    "containerPath": "",
    "content": "const myVar = () => {};",
    "created_at": "[TIMESTAMP]",
    "endLine": 17,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "lexical_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: lexical_declaration

const myVar = () => {};",
    "startLine": 17,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7c078235ad80c07bc55176f61a080b5dfc580d9c6db2f51138f43cef0620d72a",
    "containerPath": "",
    "content": "interface MyInterface {
  id: number;
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 25,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "0e2943e2881dd83ae189d91d413ddcc47ea685ff",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
    ],
    "kind": "interface_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: interface_declaration

interface MyInterface {
  id: number;
}",
    "startLine": 23,
    "symbols": [
      {
        "kind": "function",
        "line": 7,
        "name": "hello",
      },
      {
        "kind": "class",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 12,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 17,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 19,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 23,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse YAML fixtures correctly 1`] = `
[
  {
    "chunk_hash": "7faf28cc86373c82f34b2d4885392ed863a17a33a23fa5ef55caf75a9b798085",
    "content": "document: one",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

document: one",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "42b8143ee2f453a99da7d620fa6e4098ce5b58a81e47ee92787784673290acc1",
    "content": "pair:",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

pair:",
    "startLine": 2,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "f61f046945e572e3c609093a9bb46677315f28cb523f1d4df55f2a96e8e00a10",
    "content": "  key: value",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

  key: value",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "546d6629778413283752817130f850389ab7f46b2a45ed5e9cd45a5e32ae18b0",
    "content": "document: two",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

document: two",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ac0cddc5cbd16b18271a122ebc7fd418edd369c3bb11e941a823acd63ea91b9c",
    "content": "another_pair:",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

another_pair:",
    "startLine": 2,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "3255b416a16255d96420a3c3fbed1c6c8e36bb9929283c23d741904a51770ace",
    "content": "  nested_key: nested_value",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

  nested_key: nested_value",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;
